tdf#166756 Do not use URL encoding for file name in header and footer

- Modify the URL decoding mechanism in printfun.cxx and tabvwsh4.cxx
           since the strings are used respectively for field prinfintg and
           field preview in edit dialog

           - Add a uitest thwat verifies the edit dialog

           (this commit does not provide any automatic test to check printing)

Change-Id: Id0980a103d3b978ef5bb4800e8605b81698f32b7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196392
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>