sc/source/ui/view/tabvwsh4.cxx
@@ -2272,9 +2272,12 @@ void ScTabViewShell::FillFieldData( ScHeaderFieldData& rData )
         rData.aTitle = pDocShell->GetTitle();
 
     const INetURLObject& rURLObj = pDocShell->GetMedium()->GetURLObject();
-    rData.aLongDocName  = rURLObj.GetMainURL( INetURLObject::DecodeMechanism::Unambiguous );
+
+    // The doc names (long and short) are meant to be printed. They should be in human readable
+    // format, not with an URL encoding.
+    rData.aLongDocName  = rURLObj.GetMainURL(INetURLObject::DecodeMechanism::WithCharset);
     if ( !rData.aLongDocName.isEmpty() )
-        rData.aShortDocName = rURLObj.GetLastName(INetURLObject::DecodeMechanism::Unambiguous);
+        rData.aShortDocName = rURLObj.GetLastName(INetURLObject::DecodeMechanism::WithCharset);
     else
         rData.aShortDocName = rData.aLongDocName = rData.aTitle;
     rData.nPageNo       = 1;
